apps/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    istio.io/dataplane-mode: ambient
