apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: dashboard
  type: ClusterIP
