apps/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - dc.home
      secretName: homelab-tls
  rules:
    - host: dc.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
